--- a/client/src/styles/LoginPage.css
+++ b/client/src/styles/LoginPage.css
@@ -41,6 +41,11 @@
   font-size: 1.2rem;
 }
 
+.login-error {
+  color: red;
+  font-style: italic;
+}
+
 .login-bottom-container {
   display: flex;
   flex-direction: column;
@@ -53,6 +58,15 @@
   cursor: pointer;
   background: linear-gradient(90deg, #BB86FC 0%, #9A67EA 100%);
   color: #000000;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  width: 100%;
+}
+
+.button-loading {
+  padding: 0.5rem 0;
+  background: linear-gradient(90deg, #BB86FC60 0%, #9A67EA60 100%);
   border: none;
   border-radius: 0.5rem;
   font-size: 1.2rem;
